--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -55,3 +55,7 @@ body {
 .hidden_scroll_bar::-webkit-scrollbar {
   display: none; /* Hide scrollbar for Chrome, Safari, and Opera */
 }
+
+.no-scroll {
+  overflow: hidden;
+}
