added option to edit inventory, also fixed notification bugs

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -112,6 +112,9 @@ body {
 .animate-slide-expand {
   animation: slideExpand 1s forwards, pulseBoxShadow 2s infinite;
 }
+.animate-slide-expand-error {
+  animation: slideExpand 1s forwards, pulseBoxShadowError 2s infinite;
+}
 .animate-slide-contract {
   animation: slideContract 1s forwards;
 }
